--- a/src/app/componentes/lista-empleados/lista-empleados.component.html
+++ b/src/app/componentes/lista-empleados/lista-empleados.component.html
@@ -21,18 +21,18 @@
 </form>
 
 <div class="d-flex align-items-end flex-column mb-5">
-<div *ngFor="let empleado of empleados, let i = index" class="row">
+<div  class="row">
   <div>
     <div class=" d-flex">
       <div class="column mx-3">
-        {{i+1}} - {{empleado.nombre}} {{empleado.apellido}}
+        {{empleado?.id}} - {{empleado?.nombre}} {{empleado?.apellido}}
       </div>
       <div class="column">
-        <span class="mx-3" *ngIf="!mostrarFormulario" (click)="mostrarFormularioEditar(empleado.id)"><img src="https://cdn2.iconfinder.com/data/icons/sketchy-basic-icons/94/pencil-128.png" alt="Editar" height="20" width="20" id="editar"></span>
-        <span class="mx-3" *ngIf="!mostrarFormulario" (click)="eliminarEmpleado(empleado.id)"><img src="https://cdn4.iconfinder.com/data/icons/eon-ecommerce-i-1/32/trashcan_delete_remove-128.png" alt="Editar" height="20" width="20" id="editar"></span>
+        <span class="mx-3" *ngIf="!mostrarFormulario" (click)="mostrarFormularioEditar(empleado?.id)"><img src="https://cdn2.iconfinder.com/data/icons/sketchy-basic-icons/94/pencil-128.png" alt="Editar" height="20" width="20" id="editar"></span>
+        <span class="mx-3" *ngIf="!mostrarFormulario" (click)="eliminarEmpleado(empleado?.id)"><img src="https://cdn4.iconfinder.com/data/icons/eon-ecommerce-i-1/32/trashcan_delete_remove-128.png" alt="Editar" height="20" width="20" id="editar"></span>
       </div>
     </div>
-    <div *ngIf="mostrarFormulario && idForm === empleado.id">
+    <div *ngIf="mostrarFormulario && idForm === empleado?.id">
       <form class="form-group row">
         <div class="form-group col-md-3">
           <label for="nombre">Nombre</label>
@@ -43,7 +43,7 @@
           <input type="text" name="apellido" id="apellido" placeholder="Apellido..." class="form-control" [(ngModel)]="cuadroApellido">
         </div>
         <div class="col">
-          <button class="btn btn-primary my-3" (click)="actualizarEmpleado({nombre:cuadroNombre, apellido:cuadroApellido}, i)">Actualizar</button>
+          <button class="btn btn-primary my-3" (click)="actualizarEmpleado({nombre:cuadroNombre, apellido:cuadroApellido}, empleado?.id)">Actualizar</button>
         </div>
       </form>
     </div>
