--- a/src/app/componentes/lista-empleados/lista-empleados.component.html
+++ b/src/app/componentes/lista-empleados/lista-empleados.component.html
@@ -23,13 +23,13 @@
 <div class="d-flex align-items-end flex-column mb-5">
 <div  class="row">
   <div>
-    <div class=" d-flex">
+    <div *ngIf="mostrarIconos" class=" d-flex">
       <div class="column mx-3">
         {{empleado?.id}} - {{empleado?.nombre}} {{empleado?.apellido}}
       </div>
       <div class="column">
-        <span class="mx-3" *ngIf="!mostrarFormulario" (click)="mostrarFormularioEditar(empleado?.id)"><img src="https://cdn2.iconfinder.com/data/icons/sketchy-basic-icons/94/pencil-128.png" alt="Editar" height="20" width="20" id="editar"></span>
-        <span class="mx-3" *ngIf="!mostrarFormulario" (click)="eliminarEmpleado(empleado?.id)"><img src="https://cdn4.iconfinder.com/data/icons/eon-ecommerce-i-1/32/trashcan_delete_remove-128.png" alt="Editar" height="20" width="20" id="editar"></span>
+        <span class="mx-3" (click)="mostrarFormularioEditar(empleado?.id)"><img src="https://cdn2.iconfinder.com/data/icons/sketchy-basic-icons/94/pencil-128.png" alt="Editar" height="20" width="20" id="editar"></span>
+        <span class="mx-3" (click)="eliminarEmpleado(empleado?.id)"><img src="https://cdn4.iconfinder.com/data/icons/eon-ecommerce-i-1/32/trashcan_delete_remove-128.png" alt="Editar" height="20" width="20" id="editar"></span>
       </div>
     </div>
     <div *ngIf="mostrarFormulario && idForm === empleado?.id">
